# phone-book-api

./: .gitignore  README.md  compose.yml
crates/hipo/: Cargo.toml
crates/lupa/: Cargo.toml  config.toml
crates/lupa/src/: collection.rs  connection.rs  lib.rs  operators.rs  query.rs
crates/macros-utils/: Cargo.toml
crates/macros-utils/src/: collection_derive.rs  lib.rs
crates/macros-utils/tests/: test.rs
phone-book-api/: Cargo.toml  Dockerfile  app.cpp
phone-book-api/src/: main.rs
phone-book-api/src/api/: bussiness.rs  country.rs  mod.rs
phone-book-api/src/handlers/: country_handler.rs  mod.rs
phone-book-api/src/model/: access_point.rs  address.rs  business.rs  city.rs  country.rs  mod.rs  phone.rs  tag.rs
phone-book-api/src/routers/: app.rs  mod.rs
